Add participant id

--- a/first.ipynb
+++ b/first.ipynb
@@ -116,8 +116,10 @@
    "source": [
     "# Specify the columns you want to keep\n",
     "columns_to_keep = [\n",
-    "    'matchid', 'championid', 'role_position', 'duration', 'win', 'kills', 'deaths', 'assists', 'largestkillingspree', 'largestmultikill',\n",
-    "'killingsprees', 'totdmgdealt', 'totdmgtochamp', 'totheal', 'dmgtoobj', 'dmgtoturrets', 'visionscore', 'totdmgtaken', 'goldearned', 'goldspent', 'turretkills', 'inhibkills', 'totminionskilled', 'neutralminionskilled', 'wardsbought', 'wardsplaced', 'wardskilled'\n",
+    "    'participantid', 'matchid', 'championid', 'role_position', 'duration', 'win', 'kills', 'deaths', 'assists', 'largestkillingspree',\n",
+    "    'largestmultikill', 'killingsprees', 'totdmgdealt', 'totdmgtochamp', 'totheal', 'dmgtoobj', 'dmgtoturrets', 'visionscore',\n",
+    "    'totdmgtaken', 'goldearned', 'goldspent', 'turretkills', 'inhibkills', 'totminionskilled', 'neutralminionskilled', 'wardsbought',\n",
+    "    'wardsplaced', 'wardskilled'\n",
     "]\n",
     "\n",
     "# Filter the data\n",
