--- a/first.ipynb
+++ b/first.ipynb
@@ -44,16 +44,22 @@
     "# Step 3: Remove the 'id_y' column and rename 'id_x' to 'participantid'\n",
     "merged_data = merged_data.drop(columns=['id_y']).rename(columns={'id_x': 'participantid'})\n",
     "\n",
-    "# Step 4: Count the occurrences of each match_id in the merged_data\n",
+    "# Step 4: Filter records where dmgtoobj >= dmgtoturrets\n",
+    "merged_data = merged_data[\n",
+    "    pd.to_numeric(merged_data['dmgtoobj'], errors='coerce') >= pd.to_numeric(merged_data['dmgtoturrets'], errors='coerce')\n",
+    "]\n",
+    "merged_data = merged_data.dropna(subset=['dmgtoobj', 'dmgtoturrets'])\n",
+    "\n",
+    "# Step 5: Count the occurrences of each match_id in the filtered merged_data\n",
     "match_id_counts = merged_data['matchid'].value_counts()\n",
     "\n",
-    "# Step 5: Find match_ids that appear exactly 10 times\n",
+    "# Step 6: Find match_ids that appear exactly 10 times\n",
     "match_ids_with_10_records = match_id_counts[match_id_counts == 10].index\n",
     "\n",
-    "# Step 6: Filter merged_data to include only those records where the match_id appears 10 times\n",
+    "# Step 7: Filter merged_data to include only those records where the match_id appears 10 times\n",
     "participants_with_10_records = merged_data[merged_data['matchid'].isin(match_ids_with_10_records)]\n",
     "\n",
-    "# Step 7: Define conditions for assigning roles\n",
+    "# Step 8: Define conditions for assigning roles\n",
     "conditions = [\n",
     "    (participants_with_10_records['role'] == 'SOLO') & (participants_with_10_records['position'] == 'TOP'),\n",
     "    (participants_with_10_records['role'] == 'NONE') & (participants_with_10_records['position'] == 'JUNGLE'),\n",
@@ -68,7 +74,7 @@
     "# Create a new column 'role_position' and apply the conditions\n",
     "participants_with_10_records['role_position'] = np.select(conditions, values, default='UNKNOWN')\n",
     "\n",
-    "# Step 8: Check each match_id to ensure both teams have exactly 5 unique roles\n",
+    "# Step 9: Check each match_id to ensure both teams have exactly 5 unique roles\n",
     "valid_matches = []\n",
     "\n",
     "# Loop through each match_id\n",
@@ -85,10 +91,12 @@
     "        if len(team1['role_position'].unique()) == 5 and len(team2['role_position'].unique()) == 5:\n",
     "            valid_matches.append(match_id)\n",
     "\n",
-    "# Step 9: Filter the merged_data again to keep only valid matches\n",
+    "# Step 10: Filter the merged_data again to keep only valid matches\n",
     "valid_participants = participants_with_10_records[participants_with_10_records['matchid'].isin(valid_matches)]\n",
     "\n",
-    "# Step 10: Save the result to a new CSV file\n",
+    "print(valid_participants.shape)\n",
+    "\n",
+    "# Step 11: Save the result to a new CSV file\n",
     "# valid_participants.to_csv('../data/new/parti10records_unique_role.csv', index=False)\n",
     "\n",
     "print(f\"Number of valid matches with exactly 5 unique roles per team based on win/loss: {len(valid_matches)}\")\n"
@@ -112,7 +120,7 @@
     "    'participantid', 'matchid', 'championid', 'win', 'kills', 'deaths', 'assists', 'largestkillingspree', 'largestmultikill', \n",
     "    'killingsprees', 'doublekills', 'triplekills', 'quadrakills', 'pentakills', 'legendarykills',\n",
     "    'totdmgdealt', 'totdmgtochamp', 'dmgtoobj', 'visionscore', 'totdmgtaken', 'goldearned', 'inhibkills', \n",
-    "    'totminionskilled', 'neutralminionskilled', 'wardsbought', 'wardsplaced', 'wardskilled', 'role_position', 'duration'\n",
+    "    'totminionskilled', 'neutralminionskilled', 'wardsbought', 'wardsplaced', 'wardskilled', 'role_position', 'duration', 'dmgtoturrets'\n",
     "]\n",
     "\n",
     "# Filter the data\n",
@@ -138,7 +146,13 @@
     "junglers_df = filtered_data[filtered_data['role_position'] == 'JUNGLE']\n",
     "mid_laners_df = filtered_data[filtered_data['role_position'] == 'MID']\n",
     "adc_df = filtered_data[filtered_data['role_position'] == 'ADC']\n",
-    "supports_df = filtered_data[filtered_data['role_position'] == 'SUPPORT']"
+    "supports_df = filtered_data[filtered_data['role_position'] == 'SUPPORT']\n",
+    "\n",
+    "print(top_laners_df.shape)\n",
+    "print(junglers_df.shape)\n",
+    "print(mid_laners_df.shape)\n",
+    "print(adc_df.shape)\n",
+    "print(supports_df.shape)"
    ]
   },
   {
@@ -165,9 +179,7 @@
     "junglers_df = make_column_negative(filtered_data[filtered_data['role_position'] == 'JUNGLE'])\n",
     "mid_laners_df = make_column_negative(filtered_data[filtered_data['role_position'] == 'MID'])\n",
     "adc_df = make_column_negative(filtered_data[filtered_data['role_position'] == 'ADC'])\n",
-    "supports_df = make_column_negative(filtered_data[filtered_data['role_position'] == 'SUPPORT'])\n",
-    "\n",
-    "print(top_laners_df['deaths'].head())"
+    "supports_df = make_column_negative(filtered_data[filtered_data['role_position'] == 'SUPPORT'])"
    ]
   },
   {
@@ -183,15 +195,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "match_duration_col = 'duration'  # Column that contains match duration (in seconds or minutes)\n",
+    "# match_duration_col = 'duration'  # Column that contains match duration (in seconds or minutes)\n",
     "\n",
-    "def divide_by_duration(df, metrics, duration_col, suffix='_per_minute'):\n",
-    "    df[duration_col] = df[duration_col] / 60\n",
+    "def divide_by_duration(df, metrics, suffix='_per_minute'):\n",
+    "    df['duration'] = df['duration'] / 60\n",
     "    for metric in metrics:\n",
     "        # Convert match duration to minutes (if it's in seconds)\n",
     "        # Create a new column with the suffix to store the divided value\n",
     "        new_column_name = metric + suffix\n",
-    "        df[new_column_name] = df[metric] / df[duration_col]\n",
+    "        df[new_column_name] = df[metric] / df['duration']\n",
     "    return df\n",
     "\n",
     "\n",
@@ -222,10 +234,9 @@
     "    \n",
     "    # Ensure the column is of numeric type (float)\n",
     "    df['wardsbought'] = df['wardsbought'].astype(float)\n",
+    "    # print(df['wardsbought'].head())\n",
     "    \n",
-    "    print(df['wardsbought'].head())\n",
-    "    \n",
-    "    return df\n"
+    "    return df"
    ]
   },
   {
@@ -243,11 +254,10 @@
    "source": [
     "# Support Role\n",
     "support_fill_nan_data = fill_wardsbought_with_average(supports_df)\n",
-    "support_metrics_to_divide = ['visionscore', 'wardsplaced', 'wardskilled', 'wardsbought', 'totdmgtaken']\n",
+    "support_metrics_to_divide = ['visionscore', 'wardsplaced', 'wardskilled', 'wardsbought', 'totdmgtaken', 'kills', 'deaths', 'assists']\n",
+    "# support_visionscore_per_wardplaced = generate_visionscore_per_wardplaced(support_fill_nan_data)\n",
     "\n",
-    "support_visionscore_per_wardplaced = generate_visionscore_per_wardplaced(support_fill_nan_data)\n",
-    "\n",
-    "print(support_visionscore_per_wardplaced['wardsbought'].head())"
+    "# print(support_visionscore_per_wardplaced['wardsbought'].head())"
    ]
   },
   {
@@ -256,11 +266,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for column in support_metrics_to_divide:\n",
-    "    if column in support_visionscore_per_wardplaced.columns:\n",
-    "        print(f\"{column}: {support_visionscore_per_wardplaced[column].dtype}\")\n",
-    "    else:\n",
-    "        print(f\"{column}: Column not found in DataFrame\")"
+    "# for column in support_metrics_to_divide:\n",
+    "#     if column in support_visionscore_per_wardplaced.columns:\n",
+    "#         print(f\"{column}: {support_visionscore_per_wardplaced[column].dtype}\")\n",
+    "#     else:\n",
+    "#         print(f\"{column}: Column not found in DataFrame\")"
    ]
   },
   {
@@ -270,23 +280,23 @@
    "outputs": [],
    "source": [
     "# ADC Role\n",
-    "adc_metrics_to_divide = ['totdmgtochamp', 'totminionskilled', 'dmgtoobj', 'goldearned']\n",
-    "adc_divided = divide_by_duration(adc_df, adc_metrics_to_divide, match_duration_col)\n",
+    "adc_metrics_to_divide = ['totdmgtochamp', 'totminionskilled', 'dmgtoobj', 'goldearned', 'kills', 'deaths', 'assists', 'dmgtoturrets']\n",
+    "adc_divided = divide_by_duration(adc_df, adc_metrics_to_divide)\n",
     "\n",
-    "support_divided = divide_by_duration(support_visionscore_per_wardplaced, support_metrics_to_divide, match_duration_col)\n",
+    "support_divided = divide_by_duration(support_fill_nan_data, support_metrics_to_divide)\n",
     "\n",
     "# Mid Role\n",
-    "mid_metrics_to_divide = ['totdmgtochamp', 'goldearned','visionscore', 'dmgtoobj', 'totdmgdealt','totminionskilled']\n",
-    "mid_divided = divide_by_duration(mid_laners_df, mid_metrics_to_divide, match_duration_col)\n",
+    "mid_metrics_to_divide = ['totdmgtochamp', 'goldearned','visionscore', 'dmgtoobj', 'totdmgdealt','totminionskilled', 'kills', 'deaths', 'assists']\n",
+    "mid_divided = divide_by_duration(mid_laners_df, mid_metrics_to_divide)\n",
     "\n",
     "# Top Role\n",
     "top_metrics_to_divide = ['totdmgtaken', 'deaths', 'assists', 'goldearned', 'totdmgtochamp', 'totminionskilled', 'totdmgdealt', 'kills']\n",
     "top_damage_per_kill = generate_dmg_per_kill(top_laners_df)\n",
-    "top_divided = divide_by_duration(top_damage_per_kill, top_metrics_to_divide, match_duration_col)\n",
+    "top_divided = divide_by_duration(top_damage_per_kill, top_metrics_to_divide)\n",
     "\n",
     "# Jungle Role\n",
-    "jungle_metrics_to_divide = ['neutralminionskilled', 'kills', 'assists', 'goldearned','visionscore', 'totdmgdealt', 'dmgtoobj', 'totdmgtochamp']\n",
-    "jungle_divided = divide_by_duration(junglers_df, jungle_metrics_to_divide, match_duration_col)"
+    "jungle_metrics_to_divide = ['neutralminionskilled', 'kills', 'assists', 'goldearned','visionscore', 'totdmgdealt', 'dmgtoobj', 'totdmgtochamp', 'deaths']\n",
+    "jungle_divided = divide_by_duration(junglers_df, jungle_metrics_to_divide)"
    ]
   },
   {
@@ -295,7 +305,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(mid_divided.head())"
+    "# print(mid_divided.head())\n",
+    "print(adc_divided.shape)\n",
+    "print(jungle_divided.shape)\n",
+    "print(support_divided.shape)\n",
+    "print(mid_divided.shape)\n",
+    "print(top_divided.shape)"
    ]
   },
   {
@@ -364,11 +379,11 @@
    "outputs": [],
    "source": [
     "normalized_before_correlation_metrics = {\n",
-    "    \"adc\": ['totdmgtochamp_per_minute', 'totminionskilled_per_minute', 'goldearned_per_minute', 'largestkillingspree', 'largestmultikill', 'dmgtoobj_per_minute'],\n",
-    "    \"support\": ['wardskilled_per_minute', 'wardsplaced_per_minute', 'visionscore_per_minute', 'wardsbought_per_minute', 'totdmgtaken_per_minute'],\n",
-    "    \"mid\": ['totdmgtochamp_per_minute', 'goldearned_per_minute', 'largestkillingspree', 'visionscore_per_minute', 'totdmgdealt_per_minute', 'dmgtoobj_per_minute', 'totminionskilled_per_minute'],\n",
+    "    \"adc\": ['totdmgtochamp_per_minute', 'totminionskilled_per_minute', 'goldearned_per_minute', 'largestkillingspree', 'largestmultikill', 'dmgtoobj_per_minute', 'kills_per_minute', 'deaths_per_minute', 'assists_per_minute', 'dmgtoturrets_per_minute'],\n",
+    "    \"support\": ['wardskilled_per_minute', 'wardsplaced_per_minute', 'visionscore_per_minute', 'wardsbought_per_minute', 'totdmgtaken_per_minute', 'kills_per_minute', 'deaths_per_minute', 'assists_per_minute'],\n",
+    "    \"mid\": ['totdmgtochamp_per_minute', 'goldearned_per_minute', 'largestkillingspree', 'visionscore_per_minute', 'totdmgdealt_per_minute', 'dmgtoobj_per_minute', 'totminionskilled_per_minute', 'kills_per_minute', 'deaths_per_minute', 'assists_per_minute'],\n",
     "    \"top\": ['totdmgtaken_per_minute', 'deaths_per_minute', 'dmg_per_kill', 'goldearned_per_minute', 'totdmgtochamp_per_minute', 'assists_per_minute', 'totminionskilled_per_minute', 'totdmgdealt_per_minute', 'kills_per_minute', 'largestkillingspree'],\n",
-    "    \"jungle\": ['neutralminionskilled_per_minute', 'kills_per_minute', 'assists_per_minute', 'goldearned_per_minute', 'visionscore_per_minute', 'totdmgdealt_per_minute', 'dmgtoobj_per_minute', 'totdmgtochamp_per_minute', 'killingsprees', 'largestmultikill']\n",
+    "    \"jungle\": ['neutralminionskilled_per_minute', 'kills_per_minute', 'assists_per_minute', 'goldearned_per_minute', 'visionscore_per_minute', 'totdmgdealt_per_minute', 'dmgtoobj_per_minute', 'totdmgtochamp_per_minute', 'killingsprees', 'largestmultikill', 'deaths_per_minute']\n",
     "}\n",
     "\n",
     "visualize_correlation_matrix(adc_divided, normalized_before_correlation_metrics['adc'], 'ADC')\n",
@@ -391,7 +406,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(adc_divided.head())"
+    "print(adc_divided.head()) "
    ]
   },
   {
@@ -401,11 +416,11 @@
    "outputs": [],
    "source": [
     "normalized_after_correlation_metrics = {\n",
-    "    \"adc\": ['totdmgtochamp_per_minute', 'totminionskilled_per_minute', 'largestkillingspree', 'largestmultikill', 'dmgtoobj_per_minute'],\n",
-    "    \"support\": ['wardskilled_per_minute', 'wardsplaced_per_minute', 'visionscore_per_minute', 'wardsbought_per_minute', 'totdmgtaken_per_minute'],\n",
-    "    \"mid\": ['totdmgtochamp_per_minute', 'largestkillingspree', 'visionscore_per_minute', 'totdmgdealt_per_minute', 'dmgtoobj_per_minute', 'totminionskilled_per_minute'],\n",
-    "    \"top\": ['totdmgtaken_per_minute', 'deaths_per_minute', 'dmg_per_kill', 'totdmgtochamp_per_minute', 'assists_per_minute', 'totdmgdealt_per_minute', 'kills_per_minute'],\n",
-    "    \"jungle\": ['neutralminionskilled_per_minute', 'assists_per_minute', 'visionscore_per_minute', 'totdmgdealt_per_minute', 'dmgtoobj_per_minute', 'totdmgtochamp_per_minute', 'largestmultikill']\n",
+    "    \"adc\": ['totdmgtochamp_per_minute', 'totminionskilled_per_minute', 'largestkillingspree', 'largestmultikill', 'dmgtoobj_per_minute', 'deaths_per_minute', 'assists_per_minute', 'dmgtoturrets_per_minute'],\n",
+    "    \"support\": ['wardskilled_per_minute', 'wardsplaced_per_minute', 'visionscore_per_minute', 'wardsbought_per_minute', 'totdmgtaken_per_minute', 'kills_per_minute', 'deaths_per_minute', 'assists_per_minute'],    \n",
+    "    \"mid\": ['totdmgtochamp_per_minute', 'visionscore_per_minute', 'totdmgdealt_per_minute', 'dmgtoobj_per_minute', 'totminionskilled_per_minute', 'kills_per_minute', 'deaths_per_minute', 'assists_per_minute'],\n",
+    "    \"top\": ['totdmgtaken_per_minute', 'deaths_per_minute', 'dmg_per_kill', 'totdmgtochamp_per_minute', 'assists_per_minute', 'totdmgdealt_per_minute', 'kills_per_minute', 'totminionskilled_per_minute'],\n",
+    "    \"jungle\": ['neutralminionskilled_per_minute', 'kills_per_minute', 'assists_per_minute', 'visionscore_per_minute', 'totdmgdealt_per_minute', 'dmgtoobj_per_minute', 'totdmgtochamp_per_minute', 'largestmultikill', 'deaths_per_minute']\n",
     "}\n",
     "\n",
     "visualize_correlation_matrix(adc_divided, normalized_after_correlation_metrics['adc'], 'ADC')\n",
@@ -672,6 +687,7 @@
     "\n",
     "def plot_each_cluster(df, features, cluster, title):\n",
     "    cluster_data = df[df['kmeans_cluster'] == cluster]\n",
+    "    print(f\"Cluster {cluster}: {len(cluster_data)} data points\")\n",
     "    feature_combinations = list(itertools.combinations(features, 2))\n",
     "    n_cols = 4\n",
     "    n_rows = (len(feature_combinations) + n_cols - 1) // n_cols\n",
@@ -709,19 +725,19 @@
     "# top_cluster_counts = 5\n",
     "# jungle_cluster_counts = 5\n",
     "\n",
-    "adc_cluster_counts = 7\n",
-    "support_cluster_counts = 8\n",
-    "mid_cluster_counts = 7\n",
-    "top_cluster_counts = 8\n",
-    "jungle_cluster_counts = 9\n",
+    "adc_cluster_counts = 4\n",
+    "support_cluster_counts = 4\n",
+    "mid_cluster_counts = 4\n",
+    "top_cluster_counts = 5\n",
+    "jungle_cluster_counts = 5\n",
     "\n",
-    "adc_outlier_kmean = analyze_outliers_with_kmeans(adc_include_anomaly, normalized_after_correlation_metrics['adc'], 'adc', adc_cluster_counts)\n",
-    "support_outlier_kmean = analyze_outliers_with_kmeans(support_include_anomaly, normalized_after_correlation_metrics['support'], 'support', support_cluster_counts)\n",
-    "mid_outlier_kmean = analyze_outliers_with_kmeans(mid_include_anomaly, normalized_after_correlation_metrics['mid'], 'mid', mid_cluster_counts)\n",
-    "top_outlier_kmean = analyze_outliers_with_kmeans(top_include_anomaly, normalized_after_correlation_metrics['top'], 'top', top_cluster_counts)\n",
-    "jungle_outlier_kmean = analyze_outliers_with_kmeans(jungle_include_anomaly, normalized_after_correlation_metrics['jungle'], 'jungle', jungle_cluster_counts)\n",
+    "adc_outlier_kmean = analyze_outliers_with_kmeans(adc_include_anomaly, normalized_before_correlation_metrics['adc'], 'adc', adc_cluster_counts)\n",
+    "support_outlier_kmean = analyze_outliers_with_kmeans(support_include_anomaly, normalized_before_correlation_metrics['support'], 'support', support_cluster_counts)\n",
+    "mid_outlier_kmean = analyze_outliers_with_kmeans(mid_include_anomaly, normalized_before_correlation_metrics['mid'], 'mid', mid_cluster_counts)\n",
+    "top_outlier_kmean = analyze_outliers_with_kmeans(top_include_anomaly, normalized_before_correlation_metrics['top'], 'top', top_cluster_counts)\n",
+    "jungle_outlier_kmean = analyze_outliers_with_kmeans(jungle_include_anomaly, normalized_before_correlation_metrics['jungle'], 'jungle', jungle_cluster_counts)\n",
     "\n",
-    "print(len(adc_outlier_kmean))"
+    "# print(len(adc_outlier_kmean))\n"
    ]
   },
   {
@@ -939,7 +955,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
