--- a/first.ipynb
+++ b/first.ipynb
@@ -24,10 +24,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The data obtained from Kaggle is already cleaned, so further cleaning is unnecessary.\n",
+    "## Data Preparation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This section lists the core libraries and machine learning tools used in the notebook, along with their purposes:\n",
     "\n",
-    "Due to the large dataset size, the data is divided into two files. We concatenate these files and then merge them with participant data and match data. \n",
-    "After merging, we filter the data to include only matches with exactly 10 participants, ensuring that roles are not duplicated within each team."
+    "Core Libraries for Data Manipulation and Visualization\n",
+    "- **pandas**: For data manipulation and analysis.\n",
+    "- **numpy**: For numerical computing.\n",
+    "- **seaborn**: For statistical data visualization.\n",
+    "- **matplotlib.pyplot**: For creating static, interactive, and animated visualizations.\n",
+    "- **itertools**: For efficient looping and handling combinatoric operations.\n",
+    "\n",
+    "Machine Learning Tools\n",
+    "- **sklearn.ensemble.IsolationForest**: For anomaly detection using an ensemble-based isolation approach.\n",
+    "- **sklearn.cluster.KMeans**: For clustering data points into groups based on their specified features.\n",
+    "- **sklearn.preprocessing.StandardScaler**: For scaling data to standardize features.\n",
+    "- **sklearn.metrics.silhouette_score**: For evaluating the quality of clusters using the silhouette coefficient."
    ]
   },
   {
@@ -51,6 +68,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This section handles the loading, concatenation, and initial filtering of the dataset. Due to the large size of the data, it is split across two files, which are concatenated and then merged with participant and match data. Further filtering ensures the dataset is clean and adheres to specific constraints."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Steps:**\n",
+    "1. **Load the Data**:\n",
+    "- `participants.csv`: Contains participant data, including information about players and roles.\n",
+    "- `stats1.csv` and `stats2.csv`: Contain game statistics, divided into two files due to their size.\n",
+    "- `matches.csv`: Contains match data, including match identifiers and related details."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -61,6 +96,19 @@
     "stat1_data = pd.read_csv('./data/stats1.csv')\n",
     "stat2_data = pd.read_csv('./data/stats2.csv')\n",
     "matches_data = pd.read_csv('./data/matches.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. **Data Cleansing:**\n",
+    "- `dmgtoobj`: Represents the total damage to objects, which inherently includes damage to turrets.\n",
+    "- `dmgtoturrets`: Represents the specific damage to turrets.\n",
+    "\n",
+    "Assumption:\n",
+    "\n",
+    "Since turrets are a subset of objects, the value of `dmgtoturrets` cannot logically exceed `dmgtoobj`. Rows violating this rule indicate invalid data and are filtered out. Additionally, rows with missing or non-numeric values in these columns are removed."
    ]
   },
   {
@@ -92,6 +140,21 @@
     "# The shape of data after cleaning\n",
     "print(\"The shape of stat1_data after cleaning:\", stat1_data_cleaned.shape)\n",
     "print(\"The shape of stat2_data after cleaning:\", stat2_data_cleaned.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. **Concatenate Large Datasets**:\n",
+    "Combine `stats1.csv` and `stats2.csv` into a single dataset for unified processing.\n",
+    "\n",
+    "3. **Merge Datasets**:\n",
+    "Merge the concatenated statistics with participant data and match data to create a comprehensive dataset.\n",
+    "\n",
+    "4. **Filter Matches**:\n",
+    "- Retain only matches with exactly **10 participants**.\n",
+    "- Ensure roles are unique and not duplicated within each team to maintain valid team compositions."
    ]
   },
   {
@@ -168,7 +231,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Filter the columns to reduce the dataset size while retaining an overview of key metrics for each role."
+    "5. **Optimize DataFrame Size**:\n",
+    "- Separate the dataset by roles (e.g., **Top, Jungle, Mid, ADC, Support**) to facilitate role-specific analysis.\n",
+    "- Select only relevant columns to reduce the size of the DataFrame, focusing on key features needed for analysis."
    ]
   },
   {
@@ -192,7 +257,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Higher Death, Less Performance"
+    "In this step, we adjust the `deaths` column to better align with performance metrics. Since a higher number of deaths indicates poorer performance, the values in this column are made negative to reflect this relationship."
    ]
   },
   {
@@ -222,7 +287,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Metric Transformation by dividing with duration"
+    "6. **Feature Engineering and Scaling**:\n",
+    "Divide time-dependent features (e.g., damage, gold, kills) by **match duration** to standardize values across matches of varying lengths and etc."
    ]
   },
   {
@@ -283,13 +349,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Special Handle for Support due to 'wardplaced' is Object (it cannot be divided by float)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -322,7 +381,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finding Feature Correlation"
+    "## Feature Correlation Matrix"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This function generates and visualizes a correlation matrix for selected features in the dataset. It helps identify relationships between variables for a specific role."
    ]
   },
   {
@@ -370,7 +436,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Plot the heatmap showing the correlation of the features (after first consideration based on team's domain knowledge)"
+    "To analyze feature relationships for different roles in the dataset, correlation matrices are generated and visualized for key metrics specific to each role."
    ]
   },
   {
@@ -464,11 +530,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Elbow Method, Silhouette Analysis, and Anomaly Detection with Isolation Forest"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# the color for plotting KMeans clusters\n",
+    "\n",
     "color_for_plot = {\n",
     "    0: 'orange',\n",
     "    1: 'red',\n",
@@ -479,6 +554,22 @@
     "    6: 'pink',\n",
     "    7: 'gray',\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This function performs **Elbow** and **Silhouette** analyses to determine the optimal number of clusters for a given role. It helps identify the best clustering configuration by evaluating inertia and silhouette scores across different cluster numbers.\n",
+    "\n",
+    "Process:\n",
+    "1. **Elbow Plot**:\n",
+    "- Plots the inertia values (within-cluster sum of squares) for cluster sizes ranging from 2 to 10.\n",
+    "- The \"elbow\" in the plot indicates the optimal number of clusters where the inertia starts to decrease at a slower rate.\n",
+    "\n",
+    "2. **Silhouette Plot**:\n",
+    "- Measures how similar data points are within a cluster compared to other clusters.\n",
+    "- Higher silhouette scores suggest better-defined clusters."
    ]
   },
   {
@@ -525,6 +616,26 @@
     "    plt.suptitle(f'Elbow and Silhouette Analysis for {role.capitalize()} Role')\n",
     "    plt.show()\n",
     "    # plt.savefig(f\"./Isolation-forest-getInsight/Elbow-silhouette/{role}_elbow_silhouette_plot.png\", dpi=100)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This function performs anomaly detection using the **Isolation Forest** algorithm, identifies normal vs. anomaly data points, and visualizes the results. The analysis is combined with **Elbow** and **Silhouette** methods for clustering insights.\n",
+    "\n",
+    "Process:\n",
+    "1. **Data Preprocessing**:\n",
+    "- Drops unnecessary columns and handles missing, infinite, or outlier values.\n",
+    "- Scales the data using **StandardScaler** for consistent metric comparison.\n",
+    "   \n",
+    "2. **Isolation Forest**:\n",
+    "- Detects anomalies in the data by isolating them based on feature distributions.\n",
+    "- Anomalies are marked with `-1`, and normal data is labeled as `1`.\n",
+    "\n",
+    "3. **Visualization**:\n",
+    "- **Elbow and Silhouette Plots** for anomaly data to determine optimal clusters.\n",
+    "- **Normal vs Anomaly Plot** visualizes how the normal and anomaly data points distribute across different feature combinations."
    ]
   },
   {
@@ -636,6 +747,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## K-Means Clustering for Outlier Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This section utilizes **K-Means clustering** to analyze and visualize outliers within the dataset based on selected features. The results are shown in multiple ways:\n",
+    "1. Cluster analysis across feature combinations.\n",
+    "2. Detailed visualizations of individual clusters.\n",
+    "\n",
+    "Key Functions:\n",
+    "1. **`compute_axis_limits`**:\n",
+    "- Computes the axis limits for scatter plots based on feature combinations to ensure consistent visualization across all plots.\n",
+    "\n",
+    "2. **`analyze_outliers_with_kmeans`**:\n",
+    "- Applies **K-Means clustering** on the scaled data.\n",
+    "- Adds a `kmeans_cluster` column to the DataFrame for cluster assignments.\n",
+    "- Plots the overall cluster distribution and individual clusters for better insight.\n",
+    "\n",
+    "3. **`plot_clusters`**:\n",
+    "- Plots all the clusters in 2D scatter plots for each feature pair.\n",
+    "- Ensures consistent axis limits across plots for clarity.\n",
+    "\n",
+    "4. **`plot_each_cluster`**:\n",
+    "- Visualizes each cluster individually, making it easier to analyze data points within specific clusters.\n",
+    "- Provides a detailed view of the data points belonging to a particular cluster."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -737,6 +881,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Specify the number of clusters for each role based on our conclusions\n",
     "adc_cluster_counts = 7\n",
     "support_cluster_counts = 4\n",
     "mid_cluster_counts = 4\n",
@@ -748,6 +893,20 @@
     "mid_outlier_kmean = analyze_outliers_with_kmeans(mid_anomaly, metrics_after_correlation['mid'], 'mid', mid_cluster_counts)\n",
     "top_outlier_kmean = analyze_outliers_with_kmeans(top_anomaly, metrics_after_correlation['top'], 'top', top_cluster_counts)\n",
     "jungle_outlier_kmean = analyze_outliers_with_kmeans(jungle_anomaly, metrics_after_correlation['jungle'], 'jungle', jungle_cluster_counts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Z-score Visualization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The function `normalize_features` is designed to normalize selected features in a dataset to the range [0, 1]. This ensures that all features are scaled uniformly."
    ]
   },
   {
@@ -773,6 +932,13 @@
     "        max_val = df[col].max()\n",
     "        df_normalized[col] = (df[col] - min_val) / (max_val - min_val)\n",
     "    return df_normalized"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `zscore_plot_normalized` function generates a scatter plot showing the normalized scores of features in a dataset, segmented by clusters. It also identifies and annotates outliers based on z-score thresholds. This function is useful for visualizing data distributions and detecting anomalies."
    ]
   },
   {
@@ -870,6 +1036,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `process_role_data` function calculates and visualizes the performance distribution of data based on normalized feature scores for different roles. It also detects and annotates outliers based on predefined z-score thresholds. This function helps in identifying performance patterns."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -950,6 +1123,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Plot the z-score distribution for anomaly data detected by isolation forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "process_role_data(adc_divided, adc_outlier_kmean, metrics_after_correlation['adc'], thresholds)\n",
+    "process_role_data(support_divided, support_outlier_kmean, metrics_after_correlation['support'], thresholds)\n",
+    "process_role_data(mid_divided, mid_outlier_kmean, metrics_after_correlation['mid'], thresholds)\n",
+    "process_role_data(top_divided, top_outlier_kmean, metrics_after_correlation['top'], thresholds)\n",
+    "process_role_data(jungle_divided, jungle_outlier_kmean, metrics_after_correlation['jungle'], thresholds)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Plot the z-score distribution for normal data detected by isolation forest"
    ]
   },
@@ -959,23 +1152,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "process_role_data(adc_divided,adc_outlier_kmean, metrics_after_correlation['adc'], thresholds)\n",
-    "process_role_data(support_divided, support_outlier_kmean, metrics_after_correlation['support'], thresholds)\n",
-    "process_role_data(mid_divided, mid_outlier_kmean, metrics_after_correlation['mid'], thresholds)\n",
-    "process_role_data(top_divided, top_outlier_kmean, metrics_after_correlation['top'], thresholds)\n",
-    "process_role_data(jungle_divided, jungle_outlier_kmean, metrics_after_correlation['jungle'], thresholds)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "process_role_data(adc_divided,adc_normal, metrics_after_correlation['adc'], thresholds)\n",
-    "process_role_data(support_divided,support_normal, metrics_after_correlation['support'], thresholds)\n",
+    "process_role_data(adc_divided, adc_normal, metrics_after_correlation['adc'], thresholds)\n",
+    "process_role_data(support_divided, support_normal, metrics_after_correlation['support'], thresholds)\n",
     "process_role_data(mid_divided, mid_normal, metrics_after_correlation['mid'], thresholds)\n",
-    "process_role_data(top_divided,top_normal, metrics_after_correlation['top'], thresholds)\n",
+    "process_role_data(top_divided, top_normal, metrics_after_correlation['top'], thresholds)\n",
     "process_role_data(jungle_divided, jungle_normal, metrics_after_correlation['jungle'], thresholds)"
    ]
   }
@@ -996,7 +1176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
