--- a/first.ipynb
+++ b/first.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +373,7 @@
     "top_divided = divide_by_duration(top_damage_per_kill, top_metrics_to_divide)\n",
     "\n",
     "# Jungle Role\n",
-    "jungle_metrics_to_divide = ['neutralminionskilled', 'kills', 'assists', 'goldearned','visionscore', 'totdmgdealt', 'dmgtoobj', 'totdmgtochamp', 'deaths']\n",
+    "jungle_metrics_to_divide = ['neutralminionskilled', 'kills', 'assists', 'goldearned','visionscore', 'totdmgdealt', 'dmgtoobj', 'totdmgtochamp', 'deaths', 'dmgtoturrets', 'inhibkills']\n",
     "jungle_divided = divide_by_duration(junglers_df, jungle_metrics_to_divide)"
    ]
   },
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,8 +463,9 @@
     "        'assists_per_minute', 'totdmgdealt_per_minute', 'kills_per_minute', 'largestkillingspree', 'totminionskilled_per_minute',\n",
     "        ],\n",
     "    \"jungle\": [\n",
-    "        'neutralminionskilled_per_minute', 'kills_per_minute', 'assists_per_minute', 'goldearned_per_minute', 'visionscore_per_minute', \n",
-    "        'totdmgdealt_per_minute', 'dmgtoobj_per_minute', 'totdmgtochamp_per_minute', 'killingsprees', 'largestmultikill', 'deaths_per_minute'\n",
+    "        'neutralminionskilled_per_minute', 'kills_per_minute', 'assists_per_minute', 'killingsprees',\n",
+    "        'visionscore_per_minute', 'totdmgdealt_per_minute', 'dmgtoobj_per_minute', 'totdmgtochamp_per_minute', 'deaths_per_minute', \n",
+    "        'goldearned_per_minute', 'dmgtoturrets_per_minute', 'inhibkills_per_minute', 'largestmultikill'\n",
     "        ]\n",
     "}\n",
     "\n",
@@ -506,7 +507,7 @@
     "    \"support\": [],\n",
     "    \"mid\": ['goldearned_per_minute', 'largestkillingspree'],\n",
     "    \"top\": ['largestkillingspree', 'goldearned_per_minute'],\n",
-    "    \"jungle\": ['killingsprees', 'goldearned_per_minute']\n",
+    "    \"jungle\": ['killingsprees']\n",
     "}\n",
     "\n",
     "# Calling the function to get the filtered metrics\n",
@@ -538,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -781,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -886,7 +887,7 @@
     "support_cluster_counts = 4\n",
     "mid_cluster_counts = 4\n",
     "top_cluster_counts = 5\n",
-    "jungle_cluster_counts = 5\n",
+    "jungle_cluster_counts = 6\n",
     "\n",
     "adc_outlier_kmean = analyze_outliers_with_kmeans(adc_anomaly, metrics_after_correlation['adc'], 'adc', adc_cluster_counts)\n",
     "support_outlier_kmean = analyze_outliers_with_kmeans(support_anomaly, metrics_after_correlation['support'], 'support', support_cluster_counts)\n",
@@ -911,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -943,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -968,10 +969,6 @@
     "    # Scatter plot by cluster\n",
     "    plt.figure(figsize=(12, 8))\n",
     "    unique_clusters = df[cluster_col].unique()\n",
-    "\n",
-    "    color_for_plot = {  # Example color mapping for clusters\n",
-    "        cluster: plt.cm.tab10(i % 10) for i, cluster in enumerate(unique_clusters)\n",
-    "    }\n",
     "\n",
     "    for cluster in unique_clusters:\n",
     "        cluster_data = df[df[cluster_col] == cluster]\n",
@@ -1176,7 +1173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
